spacing fix

--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,6 @@ h1 {
   color: #333;
   font-size: 2em;
   letter-spacing: -1px;
-  margin-top: 20%;
 }
 
 h2 {
@@ -29,7 +28,7 @@ h2 {
 
 p {
   margin-bottom: 5px;
-  margin-top: 0px;
+  margin-top: 10px;
 }
 
 hr {
@@ -61,8 +60,9 @@ a:hover, a:focus {
 }
 
 .sub p {
-  font-size: 0.7em;
+  font-size: 0.6em;
   margin-bottom: 10px;
+  margin-top: 0px;
 }
 
 .sub a {
